<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu2"
            android:icon="@drawable/ic_heart_white"
            android:title="@string/menu_2"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu1"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_1"
            app:showAsAction="always" />
    </group>
</menu>